Add upwork profile link

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,8 +8,11 @@ date: 2024-07-03
 
 Hey, I'm a self employed Senior Software Engineer. I enjoy working with Cloud technologies and Full-Stack Web Development.
 
+Feel free to check my [Upwork profile](https://www.upwork.com/freelancers/kemald4).
+
 ---
 
 - Twitter [@kemaldaggen](https://twitter.com/kemaldaggen)
 - GitHub [@kemaldaggen](https://github.com/kemaldaggen)
+- Upwork [@kemald4](https://www.upwork.com/freelancers/kemald4)
 - Email gkemaldag@gmail.com
